--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   <meta name="msapplication-tap-highlight" content="no" />
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+  <link rel="stylesheet" href="https://js.arcgis.com/4.30.9/esri/themes/light/main.css"/>
+  <script src="https://js.arcgis.com/4.30.9/"></script>
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
